# housekeeping-server

./: .env  Cargo.toml  Rocket.toml
migrations/2020-08-06-053910_create_user/: up.sql
migrations/2021-01-25-091340_users/: up.sql
migrations/2021-01-25-091416_post/: up.sql
migrations/2021-01-25-091418_post/: up.sql
migrations/2021-04-19-124035_service/: down.sql  up.sql
migrations/2021-04-20-085320_post/: up.sql
migrations/2021-04-27-053327_user/: down.sql  up.sql
migrations/2021-04-28-031744_category/: down.sql  up.sql
migrations/2021-04-28-031745_category/: up.sql
migrations/2021-04-28-081247_create_goods/: down.sql  up.sql
migrations/2021-04-29-124149_cart/: up.sql
migrations/2021-05-01-071051_shop_user/: down.sql  up.sql
migrations/2021-05-01-091823_cart/: up.sql
migrations/2021-05-03-043454_addr/: down.sql  up.sql
migrations/2021-05-04-030144_order/: down.sql  up.sql
migrations/2021-05-04-032125_cart/: down.sql  up.sql
migrations/2021-05-07-092350_article/: down.sql  up.sql
migrations/2021-05-08-071857_topic/: down.sql  up.sql
migrations/2021-05-10-054449_banner/: down.sql  up.sql
migrations/2021-05-10-075433_cat_banner/: down.sql  up.sql
migrations/2021-05-10-092857_like/: down.sql  up.sql
migrations/2021-05-14-060107_order_date/: up.sql
migrations/2021-05-15-113950_order_msg/: up.sql
migrations/2021-05-16-061404_staff/: down.sql  up.sql
src/: like.rs  main.rs  models.rs  paste_id.rs  schema.rs  util.rs
src/admin/: mod.rs
src/database/: conn.rs  mod.rs  models.rs  post.rs  service.rs  user.rs
upload/: WCk
(+23 files in other folders)
