[package]
name = "housekeeping-server"
version = "0.1.0"
authors = ["jiahui <jiahui.mail@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_contrib = { version = "0.4.7", features = ["diesel_mysql_pool"] }
rand = "0.6"
# database related
chrono = "0.4.13"
diesel = { version = "1.4.5", features = ["chrono"] }
# logs
log = "0.4.11"
# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# jwt
jsonwebtoken = "7"
#img upload
rocket_upload = "*"
#md5
md5 = "0.7.0"